# decision-os-min

./: .gitignore  BENCHMARKS.md  CHANGELOG.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
bench/: benchmark.py
decision_os_min/: __init__.py  advisors.py  audit.py  contracts.py  execute.py  govern.py  kernel.py  paradigm.py  plugins.py  service.py  spentstore.py
docs/: ARCHITECTURE.md  AUTHORITY_MODEL.md  COMPARISON.md  CONSTRAINT_VS_INTELLIGENCE.md  DESIGN_NOTE_single_signature.md  DESIGN_PRINCIPLES.md  PLUGIN_API.md  THREAT_MODEL.md  TRUST_MODEL.md  WHY.md
examples/: demo.py  governed_agent.py
tests/: test_core.py  test_govern.py  test_paradigm.py  test_plugins.py  test_redteam_regressions.py  test_service.py
