[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "decision-os-min"
version = "0.1.0"
description = "The distilled reference core of the Decision OS: single-authority signed decisions, action-binding, one-time capability tokens, a PEP, and one tamper-evident audit log — in one small package. Stdlib + cryptography only."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "PolyForm-Noncommercial-1.0.0" }
authors = [{ name = "Ali Pourrahim" }]
dependencies = ["cryptography>=42"]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6", "mypy>=1.11", "httpx>=0.27"]
# The deployable HTTP starter (REST + OpenAPI + metrics). Kept OPTIONAL so the
# core stays dependency-pure (stdlib + cryptography).
service = ["fastapi>=0.110", "uvicorn>=0.27", "pydantic>=2"]

[project.scripts]
decision-os-serve = "decision_os_min.service:main"

[tool.setuptools]
packages = ["decision_os_min"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.ruff.lint.per-file-ignores]
# E501 (line length) is relaxed for tests, runnable examples, and benchmarks:
# these contain wide literal data rows where wrapping hurts readability.
"tests/**" = ["E501"]
"examples/**" = ["E501"]
"bench/**" = ["E501"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
